@@ -1,13 +1,11 @@
-/*
- * To change this license header, choose License Headers in Project Properties.
- * To change this template file, choose Tools | Templates
- * and open the template in the editor.
- */
 package io.muzoo.ssc.webapp;
 
 import io.muzoo.ssc.webapp.service.SecurityService;
+import io.muzoo.ssc.webapp.service.UserService;
+import io.muzoo.ssc.webapp.service.UserServiceAware;
 import io.muzoo.ssc.webapp.servlet.HomeServlet;
 import io.muzoo.ssc.webapp.servlet.LoginServlet;
+import io.muzoo.ssc.webapp.servlet.RegisterServlet;
 import jakarta.servlet.http.HttpServlet;
 import org.apache.catalina.Context;
 import org.apache.catalina.startup.Tomcat;
@@ -15,10 +13,6 @@ import org.apache.catalina.startup.Tomcat;
 import java.util.ArrayList;
 import java.util.List;
 
-/**
- *
- * @author gigadot
- */
 public class ServletRouter {
 
     private static final List<Class<? extends Routable>> routables = new ArrayList<>();
@@ -26,25 +20,29 @@ public class ServletRouter {
     static {
         routables.add(HomeServlet.class);
         routables.add(LoginServlet.class);
+        routables.add(RegisterServlet.class);
     }
 
-    private SecurityService securityService;
+    private final SecurityService securityService;
+    private final UserService userService;
 
-    public void setSecurityService(SecurityService securityService) {
+    public ServletRouter(SecurityService securityService, UserService userService) {
         this.securityService = securityService;
+        this.userService = userService;
     }
 
     public void init(Context ctx) {
         for (Class<? extends Routable> routableClass : routables) {
             try {
-                Routable routable = routableClass.newInstance();
+                Routable routable = routableClass.getDeclaredConstructor().newInstance();
                 routable.setSecurityService(securityService);
+                if (routable instanceof UserServiceAware aware) {
+                    aware.setUserService(userService);
+                }
                 String name = routable.getClass().getSimpleName();
                 Tomcat.addServlet(ctx, name, (HttpServlet) routable);
                 ctx.addServletMappingDecoded(routable.getMapping(), name);
-            } catch (InstantiationException e) {
-                e.printStackTrace();
-            } catch (IllegalAccessException e) {
+            } catch (ReflectiveOperationException e) {
                 e.printStackTrace();
             }
         }
